# adaptive-optimization

./: AdaptiveDataflow.hs  Examples.hs  INDEX.md  Main.hs  QUICKREF.md  README.md  SUMMARY.md  ShapeIndexedGraph.hs  TECHNICAL.md  VISUAL.md  adaptive-optimization.cabal  build.sh
